sqlx_insert/tests/ui/unnamed_fields.stderr
error: only named struct fields are supported
 --> tests/ui/unnamed_fields.rs:5:1
  |
5 | / #[sqlx_insert(database(Postgres))]
6 | | pub struct Thing(String, i32, i32);
  | |___________________________________^

warning: unused import: `sqlx::Postgres`
 --> tests/ui/unnamed_fields.rs:2:5
  |
2 | use sqlx::Postgres;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
